Fix issue with menu too width on mobile

--- a/static/css/custom-adaptions.css
+++ b/static/css/custom-adaptions.css
@@ -10,6 +10,10 @@ h4 {
   font-size: 2rem;
 }
 
+.Members {
+  width: auto;
+}
+
 #navbar {
   top: 0;
   position: -webkit-sticky;
